# HSEProjects

./: .gitignore  README.md  createfield.h  dinoactions.c  helloworld  input.txt  main  movdinolauncher.c  project  project.c  project_2  project_2.c  visualizefield.c
Lab 1/: createfield.c  dinoactions.c  dinoactions.h  input.txt  output.txt  visualizefield.c  visualizefield.h
Lab 2/: huffman.c  huffman.h  launcher.c  text.txt
Lab 3/: CMakeLists.txt
Lab 3/include/: ast.hpp  lexer.hpp  parser.hpp  visitor.hpp
Lab 3/src/: ast.cpp  lexer.cpp  main.cpp  parser.cpp  visitor.cpp
Lab 3/tests/: test.cpp
helloworld.dSYM/Contents/Resources/DWARF/: helloworld
helloworld.dSYM/Contents/Resources/Relocations/aarch64/: helloworld.yml
project.dSYM/Contents/Resources/DWARF/: project
project.dSYM/Contents/Resources/Relocations/aarch64/: project.yml
